--- a/src/styles/text-fields/_input-size.scss
+++ b/src/styles/text-fields/_input-size.scss
@@ -7,28 +7,28 @@
 }
 &.fo-input-md{
   .fo-input{
-    @apply px-3 py-4 h-4 text-sm;
+    @apply px-3 py-4 h-4 text-xs;
   }
 
 }
 &.fo-input-lg{
   .fo-input{
-    @apply px-4 py-5 ;
+    @apply px-4 py-5 text-sm;
   }
 }
 
 &.fo-input-xl{
   .fo-input{
-    @apply px-3 py-6 h-3 text-lg;
+    @apply px-3 py-6 h-3 text-sm;
   }
 }
 &.fo-input-2xl{
   .fo-input{
-    @apply px-4 py-6 h-0 text-xl;
+    @apply px-4 py-6 h-0 text-base;
   }
 }
 &.fo-input-3xl{
   .fo-input{
-    @apply px-6 py-9 h-3 text-2xl;
+    @apply px-6 py-9 h-3 text-lg;
   }
 }
