--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,4 @@
 @import "buttons";
 @import "icon";
 @import "text-fields/text-field";
+//@import './node_modules/@material/react-text-field/index';
