--- a/src/styles/text-fields/_input-material-standard.scss
+++ b/src/styles/text-fields/_input-material-standard.scss
@@ -1,4 +1,73 @@
-&.fo-input-standard,&.fo-input-filled{
+.fo-input-standard, .fo-input-outlined {
   @import "input-material-standard-color";
+
+}
+
+
+.fo-input-material.fo-input-standard {
+  .fo-input {
+    @apply border-0 h-0;
+    &:focus, &:not(:placeholder-shown) {
+      + .fo-md-label {
+        transform: translateY(-1rem) scale(.75);
+      }
+    }
+
+    &:focus {
+      ~ .fo-material-line {
+        @apply border-b-transparent;
+        &:after {
+          @apply scale-100;
+        }
+      }
+    }
+  }
+
+  .fo-md-label {
+    transform: translateY(0.5rem) scale(1);
+  }
+
+
+  .fo-material-line {
+    @apply border-b border-gray-300 relative ;
+    transition: border-bottom-color ease-in-out, transform .2s cubic-bezier(0, 0, .2, 1) 0ms;
+
+    &:after {
+      content: " ";
+      @apply cursor-none absolute left-0 right-0 border-b-2 scale-0 ;
+      transition: transform .2s cubic-bezier(0, 0, .2, 1) 0ms;
+      bottom: 0;
+    }
+  }
+
+  &.fo-input-small {
+    .fo-input {
+      @apply px-0 py-4;
+    }
+
+    .fo-md-label {
+      @apply text-sm;
+    }
+  }
+
+  &.fo-input-normal {
+    .fo-input {
+      @apply px-0 py-5;
+    }
+  }
+
+  &.fo-input-large {
+    .fo-input {
+      @apply px-0 py-7 text-xl;
+    }
+
+    .fo-md-label {
+      @apply text-lg;
+      transform: translateY(1rem) scale(1);
+    }
+  }
+
+  //@import "input-material-standard-color";
+
 
 }
