--- a/src/styles/text-fields/_input-size.scss
+++ b/src/styles/text-fields/_input-size.scss
@@ -19,12 +19,12 @@
 
 &.fo-input-xl{
   .fo-input{
-    @apply px-3 py-6 h-3 text-sm;
+    @apply px-6 py-6 h-3 text-base;
   }
 }
 &.fo-input-2xl{
   .fo-input{
-    @apply px-4 py-6 h-0 text-base;
+    @apply px-6 py-6 h-0 text-lg;
   }
 }
 &.fo-input-3xl{
