--- a/src/styles/text-fields/_text-field-wrap.scss
+++ b/src/styles/text-fields/_text-field-wrap.scss
@@ -1,24 +1,27 @@
-.w-input-wrap{
-  &.fo-input-sm{
-    @apply space-y-1
-
-  }
-  &.fo-input-md{
-    @apply space-y-1
-
-  }
-  &.fo-input-lg{
-    @apply space-y-1.5
-  }
-
-  &.fo-input-xl{
-    @apply space-y-1.5
-  }
-  &.fo-input-2xl{
-    @apply space-y-2
-  }
-  &.fo-input-3xl{
-    @apply space-y-2
-  }
-
-}
+///**
+//* @depreceted
+// */
+//.w-input-wrap{
+//  &.fo-input-small{
+//    @apply space-y-1
+//
+//  }
+//  &.fo-input-normal{
+//    @apply space-y-1
+//
+//  }
+//  &.fo-input-large{
+//    @apply space-y-1.5
+//  }
+//
+//  &.fo-input-xl{
+//    @apply space-y-1.5
+//  }
+//  &.fo-input-2xl{
+//    @apply space-y-2
+//  }
+//  &.fo-input-3xl{
+//    @apply space-y-2
+//  }
+//
+//}
