--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,4 +7,5 @@
 @import "buttons";
 @import "icon";
 @import "text-fields/text-field";
+@import "checkbox";
 //@import './node_modules/@material/react-text-field/index';
