--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,4 +8,5 @@
 @import "icon";
 @import "text-fields/text-field";
 @import "checkbox";
+@import "radio";
 //@import './node_modules/@material/react-text-field/index';
