--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,4 +9,5 @@
 @import "text-fields/text-field";
 @import "checkbox";
 @import "radio";
+@import "select/index";
 //@import './node_modules/@material/react-text-field/index';
