--- a/src/styles/text-fields/_input-default.scss
+++ b/src/styles/text-fields/_input-default.scss
@@ -30,29 +30,12 @@
   textarea,
   select {
     &.fo-input {
-      @apply border h-0 focus:ring  rounded-md  align-middle leading-none;
+      @apply border focus:ring  rounded-md ;
 
     }
   }
 
 
-
-
-  &.fo-input-small .fo-input{
-    @apply px-4 py-4 text-sm;
-
-  }
-
-
-  &.fo-input-normal .fo-input{
-    @apply px-5 py-5 text-base;
-
-  }
-
-  &.fo-input-large .fo-input{
-    @apply px-6 py-7 text-lg;
-
-  }
 
   &.fo-input-inherit {
     .fo-input {
